--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,19 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "rfussien/leboncoin-crawler": "^2.3",
+        "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^4.1",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
-        "symfony/yaml": "^4.0"
+        "symfony/twig-bundle": "^4.0",
+        "symfony/yaml": "^4.0",
+        "twbs/bootstrap": "4.0.0-beta.3"
     },
     "require-dev": {
-        "symfony/dotenv": "^4.0"
+        "symfony/dotenv": "^4.0",
+        "symfony/profiler-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
