--- a/config/services.yaml
+++ b/config/services.yaml
@@ -2,6 +2,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'fr'
+    url_lbc: 'https://www.leboncoin.fr/'
 
 services:
     # default configuration for services in *this* file
